--- a/css/2.css选择器.html
+++ b/css/2.css选择器.html
@@ -51,6 +51,28 @@
 	<br><br><br><br>
 
 	<h1>通用选择器</h1>
+
+	<h1>交集选择器</h1>
+
+	<h1>并集选择器</h1>
+
+	<h1>后代选择器 子选择器</h1>
+	<div class="box">
+		<div class="user">
+			<div class="menu">
+				menu
+			</div>
+		</div>
+		<div class="children">
+			儿子
+		</div>
+	</div>
+	<div class="s1">S1</div>
+	<div class="s2">S2</div>
+	<div class="s3">S3</div>
+
+
+
 	
 </body>
 </html>
