--- a/css/5.border.html
+++ b/css/5.border.html
@@ -19,11 +19,11 @@
 		.sjx{
 			width: 0;
 			height: 0;
-			border-width: 40px;
-			border-top:	transparent;
-			border-left:  	transparent;
-			border-right:  	transparent;
-			border-bottom:  red;
+			/*border-width: 40px;*/
+			border-top:	transparent 40px;
+			border-left:  	transparent 40px;
+			border-right:  	transparent 40px;
+			border-bottom:  red 40px;
 			border-style: solid;
 		}
 	</style>
